--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,15 @@
 
-/* 
+html, body {
+    height: 100%;
+    margin: 0;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.container {
+    flex: 1;
+}
 
-*/
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
